<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.henry.abaglobal.Home"
    tools:showIn="@layout/app_bar_home">



    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="250dp">


        <ImageSwitcher
            android:id ="@+id/idImageSwitcher"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >
        </ImageSwitcher>



        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_marginTop="45dp"
            android:background="@null"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_chevron_left"
                android:background="#59ffffff"/>

            <ImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_chevron_right"
                android:background="#40ffffff"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/relativeA"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"

            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curves"
                    android:layout_margin="6dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    android:text="@string/join_now"
                    android:drawableLeft="@drawable/ic_faces"
                    android:drawableStart="@drawable/ic_faces"/>

                <Button
                    android:layout_width="110dp"
                    android:drawableLeft="@drawable/ic_add_sign"
                    android:drawableStart="@drawable/ic_add_sign"
                    android:layout_height="wrap_content"
                    android:text="@string/add_listing"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_margin="6dp"
                    android:background="@drawable/curve2"/>
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/gray"
    android:layout_below="@id/rl1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_marginLeft="8dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/categories"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="16dp"
            android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnServices"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:src="@drawable/ic_services" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Services"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnTrends"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:src="@drawable/ic_trending_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trending"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="24dp"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnSales"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:src="@drawable/ic_shopping_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sales"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnPlaces"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:src="@drawable/ic_search_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Find It"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="24dp"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_marginLeft="8dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="Contact Us"/>


    </LinearLayout>



    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="16dp"
            android:hint="Ex: Food,R..."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_location"
                android:drawableStart="@drawable/ic_location"
                android:text="Choose A Location"
                tools:ignore="HardcodedText" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </Spinner>

        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="12sp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_margin="6dp"
            android:background="@drawable/curve2"/>
    </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>


</RelativeLayout>
</ScrollView>

